--- a/gmao/templates/gmao/liste_interventions.html
+++ b/gmao/templates/gmao/liste_interventions.html
@@ -135,7 +135,7 @@
                 }
             });
 
-            var table;
+            let table;
 
             function initializeDataTable() {
                 if ($.fn.DataTable.isDataTable('#interventionsTable')) {
