--- a/gmao/templates/gmao/detail_intervention.html
+++ b/gmao/templates/gmao/detail_intervention.html
@@ -87,7 +87,7 @@
 </style>
 {% endblock %}
 {% block content %}
-<div class="container-fluid mt-4">
+<div class="container-fluid">
     <div class="row">
         <!-- Carte d'informations générales -->
         <div class="col-md-6 mb-4">
